--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<navbar></navbar>
+<div class="container">
+  <router-outlet></router-outlet>
+  <!--<home></home>
+  <about></about>
+  <reservation></reservation>-->
+</div>
