--- a/src/app/components/reservation/reservation.component.css
+++ b/src/app/components/reservation/reservation.component.css
@@ -1,10 +1,12 @@
 h1 {
   color: #000;
   font-size: 2.5em;
+  text-transform: uppercase;
 }
 
 h2 {
   color: darkred;
+  text-transform: uppercase;
 }
 
 h1, h2, p {
@@ -15,10 +17,16 @@ h1, h2, p {
   margin: 80px 0 80px 0;
 }
 
-a {
+img {
   transition: 0.5s;
 }
 
-a:hover {
+img:hover {
   filter: grayscale(100%);
+  cursor: pointer;
+}
+
+.oneTable {
+  min-height: 240px;
+  margin-bottom: 60px;
 }
