--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -1,75 +1,12 @@
-<h1>TABLE RESERVATION</h1>
-<h2>Our RESTAURANT IS THE PLACE FOR ANY FOOD-ACCOMPANIED OCCASION!</h2>
-<p>Be it a business meeting lunch, a family birthday dinner, anniversary or a proposal romantic dinner or any other event… </p>
-<p>We will make sure the atmosphere and dishes do the justice!</p>
-<p>Be it a business meeting lunch, a family birthday dinner, anniversary or a proposal romantic dinner or any other event…
-  We will make sure the atmosphere and dishes do the justice!</p>
+<h1>{{pageTitle}}</h1>
+<h2>{{pageMotto}}</h2>
+<p>{{pageDescription}}</p>
 
-<!-- Tables -->
-<div class="row">
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_01.png" >
-    </a>
-  </div>
-
-  <div class="col-md-6">
-    <a href="">
-      <img src="../../../assets/images/reservetion_02.png" >
-    </a>
-  </div>
-
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_03.png" >
-    </a>
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_04.png" >
-    </a>
-  </div>
-
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_05.png" >
-    </a>
-  </div>
-
-  <div class="col-md-6">
-    <a href="">
-      <img src="../../../assets/images/reservetion_06.png" >
-    </a>
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_07.png" >
-    </a>
-  </div>
-
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_08.png" >
-    </a>
-  </div>
-
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_09.png" >
-    </a>
-  </div>
-
-  <div class="col-md-3">
-    <a href="">
-      <img src="../../../assets/images/reservetion_10.png" >
-    </a>
+<!-- Ng If Tables -->
+<div *ngIf='tables && tables.length' class="row" >
+  <div *ngFor="let table of tables"  [class]="table.className"  >
+    <div class="oneTable" [attr.data-guests]='table.guests'>
+      <img [src]="imagePath + table.imageUrl" >
+    </div>
   </div>
 </div>
