Added appointments interface and cleared html

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,2 +1,2 @@
-<h2>About our company</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cum deserunt dolorum eaque facere, impedit ipsum maiores minima nihil numquam quidem quis reiciendis repellendus sequi sit! A aperiam consequatur dolore eligendi enim exercitationem expedita incidunt inventore laborum libero maiores nemo obcaecati pariatur perferendis quam quis tempora temporibus, ut? </p>
+<h2>{{pageTitle}}</h2>
+<p>{{pageDescription}}</p>
