--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -1,174 +1,13 @@
-<h1> Herzlich Willkommen zu diese Seite </h1>
-
 <div class="appointment">
-  <h3>Available appointments</h3>
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      07:00 am – 08:00 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button" data-toggle="modal" data-target="#myModal" >Book Appointment</span>
-    </span>
-  </div>
+  <h3>{{pageTitle}}</h3>
 
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      08:15 am – 09:15 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      09:30 am – 10:30 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      10:45 am – 11:45 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      12:00 am – 13:00 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      13:15 am – 14:15 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      14:30 am – 15:30 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      15:45 am – 16:45 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      17:00 am – 18:00 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      18:15 am – 19:15 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      19:30 am – 20:30 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      20:45 am – 21:45 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
-  </div>
-
-  <div class="app-timestamp">
-    <span class="app-time">
-      <i class="glyphicon glyphicon-time"></i>
-      22:00 am – 23:00 am
-    </span>
-    <span class="app-slots">
-      6 time slots available
-    </span>
-    <span class="app-booking">
-      <span class="app-button">Book Appointment</span>
-    </span>
+  <!-- Timestamps -->
+  <div *ngIf="timestamps && timestamps.length">
+    <div class="app-timestamp" *ngFor="let timestamp of timestamps">
+      <span class="app-time"><i class="glyphicon glyphicon-time"></i>  {{timestamp.time}}</span>
+      <span class="app-slots">{{timestamp.slots}} time slots available</span>
+      <span class="app-booking"><span class="app-button" data-toggle="modal" data-target="#myModal">Book Appointment</span></span>
+    </div>
   </div>
 </div>
 
