--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,8 +11,9 @@
       <li><a routerLink="/appointment">Appointment</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a routerLink="/members"> <i class="glyphicon glyphicon-user"></i> My account</a></li>
+      <li><a routerLink="/signup" ><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
 </nav>
