--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -6,7 +6,7 @@
     <div class="app-timestamp" *ngFor="let timestamp of timestamps">
       <span class="app-time"><i class="glyphicon glyphicon-time"></i>  {{timestamp.time}}</span>
       <span class="app-slots">{{timestamp.slots}} time slots available</span>
-      <span class="app-booking"><span class="app-button" data-toggle="modal" data-target="#myModal">Book Appointment</span></span>
+      <span class="app-booking"><span class="app-button" data-toggle="modal" data-target="#myModal">Book an Appointment</span></span>
     </div>
   </div>
 </div>
@@ -19,27 +19,27 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">REQUEST APPOINTMEN</h4>
+        <h4 class="modal-title">Request an Appointment</h4>
       </div>
+
       <div class="modal-body">
         <p><i class="glyphicon glyphicon-calendar"></i> March 24, 2017    <i class="glyphicon glyphicon-time"></i>  9:30 am – 10:30 am</p>
-      </div>
-      <div class="radio">
-        <label><input type="radio" name="optradio" checked >I'm active user</label>
-      </div>
-      <div class="radio">
-        <label><input type="radio" name="optradio">I'm new user</label>
-      </div>
 
-      <div class="form-group">
-        <label for="usr">Name:</label>
-        <input type="text" class="form-control" id="usr">
+        <div class="radio">
+          <label><input type="radio" name="optradio" checked >I'm active user</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio">I'm new user</label>
+        </div>
+        <div class="form-group">
+          <label for="usr">Name:</label>
+          <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd">
+        </div>
       </div>
-      <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd">
-      </div>
-
       <button type="button" class="btn btn-success">Sign in</button>
       <button type="button" class="btn btn-default">Cancel</button>
 
