Fixed some views

--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -1,2 +1,2 @@
-<button (click)="logout()" class="basic-btn">Logout</button>
+<button (click)="logout()" class="btn btn-default">Logout</button>
 <h2> Welcome to the Member page</h2>
