--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -31,18 +31,10 @@
         <div class="radio">
           <label><input type="radio" name="optradio">I'm new user</label>
         </div>
-        <div class="form-group">
-          <label for="usr">Name:</label>
-          <input type="text" class="form-control" id="usr">
-        </div>
-        <div class="form-group">
-          <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd">
-        </div>
-      </div>
-      <button type="button" class="btn btn-success">Sign in</button>
-      <button type="button" class="btn btn-default">Cancel</button>
 
+        <app-signup></app-signup>
+        <app-login></app-login>
+      </div>
 
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
