--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,14 +1,13 @@
 <div class="form-container">
-  <a routerLink="/login" id="goback">Go back</a>
-  <h2>Custom Login</h2>
-
-
+  <h2>Login by email</h2>
   <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
-
-    <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
-    <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
-
-    <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
-    <a routerLink="/signup" class="alc">Don't have an account?</a>
+    <div class="form-group">
+      <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <input type="password" placeholder="Password" (ngModel)="password" name="password" class="form-control" required>
+    </div>
+    <button type="submit" [disabled]="!formData.valid" class="btn btn-success">Log in</button>
+    <a routerLink="/signup" class="btn btn-default">Don't have an account?</a>
   </form>
 </div>
