--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,14 @@
-<div class="form-container">
+<div class="login">
+  <h2>Login to Resto Booking</h2>
+  <form>
+    <div class="form-group">
+      <button class="btn btn-primary form-control" (click)="loginGoogle()" id="google" data-dismiss="modal">Login With Google</button>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-success form-control" routerLink="/login-email" id="email" data-dismiss="modal">Email</button>
+    </div>
 
-  <button (click)="loginGoogle()" id="google">Login With Google</button>
-  <button routerLink="/login-email" id="email">Email</button>
+    <a class="btn btn-default form-control" routerLink="/signup" routerLinkActive="active" data-dismiss="modal">No account? <strong>Create one here</strong></a>
+  </form>
 
-  <a routerLink="/signup" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a>
 </div>
