--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,14 +1,13 @@
 <div class="form-container">
-  <a routerLink="/login" id="goback">Go back</a>
-
   <h2>Join now</h2>
-
   <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
-
-    <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
-    <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
-
-
-    <button type="submit" [disabled]="!formData.valid" class="basic-btn">Create my account</button>
+    <div class="form-group">
+      <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <input type="password" placeholder="Password" (ngModel)="password" name="password" class="form-control" required>
+    </div>
+    <button type="submit" [disabled]="!formData.valid" class="btn btn-success" >Create my account</button>
+    <button type="button" class="btn btn-default" >Cancel</button>
   </form>
 </div>
