Added admin functionality

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,2 +1,5 @@
-<h2>{{pageTitle}}</h2>
-<p>{{pageDescription}}</p>
+<navbar></navbar>
+<div class="container">
+  <h2>{{pageTitle}}</h2>
+  <p>{{pageDescription}}</p>
+</div>
