--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,9 +11,9 @@
       <li><a routerLink="/appointment">Appointment</a></li>
     </ul>
 
-    <!--<ul class="nav navbar-nav navbar-right">
-      <li><a routerLink="/admin/dashboard"> <i class="glyphicon glyphicon-user"></i> Admin</a></li>
-      <li><a routerLink="/signup" ><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+    <ul class="nav navbar-nav navbar-right">
+      <!--<li><a routerLink="/admin/dashboard"> <i class="glyphicon glyphicon-user"></i> Admin</a></li>
+      <li><a routerLink="/signup" ><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
       <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>-->
 
