--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
     <ul class="nav navbar-nav navbar-right">
       <!--<li><a routerLink="/admin/dashboard"> <i class="glyphicon glyphicon-user"></i> Admin</a></li>
       <li><a routerLink="/signup" ><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
-      <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Admin</a></li>
     </ul>-->
 
   </div>
