Added Booktable Component and fixed some mistakes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,7 @@
       <li><a routerLink="/reservation">Reservation</a></li>
       <li><a routerLink="/calendar">Calendar</a></li>
       <li><a routerLink="/appointment">Appointment</a></li>
+      <li><a routerLink="/booktable">Book a table</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
