--- a/src/app/components/booking-table/booking-table.component.html
+++ b/src/app/components/booking-table/booking-table.component.html
@@ -1,4 +1,155 @@
 <navbar></navbar>
 <div class="container">
   <h2>{{pageTitle}}</h2>
+  <form (submit)="addBooking(
+      dateOfReservation.value,
+      timeOfReservation.value,
+      firstName.value,
+      lastName.value,
+      phone.value,
+      email.value,
+      numberOfPersons.value,
+      comment.value)" >
+    <div class="col-md-8 col-md-offset-1">
+      <div class="form-group col-md-6">
+        <label >Date of reservation :</label>
+        <input type="date" class="form-control" #dateOfReservation>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Time of reservation :</label>
+        <input type="time" class="form-control" #timeOfReservation>
+      </div>
+      <div class="form-group col-md-6">
+        <label>First Name :</label>
+        <input type="text" class="form-control" #firstName>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Last Name :</label>
+        <input type="text" class="form-control" #lastName>
+      </div>
+      <div class="form-group col-md-12">
+        <label>Phone :</label>
+        <input type="text" class="form-control" #phone>
+      </div>
+      <div class="form-group col-md-12">
+        <label>Email :</label>
+        <input type="email" class="form-control" #email>
+      </div>
+      <div class="form-group col-md-12">
+        <label>Number of persons :</label>
+        <select class="form-control" #numberOfPersons>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+          <option>6</option>
+          <option>7</option>
+          <option>8</option>
+          <option>9</option>
+        </select>
+      </div>
+      <div class="form-group col-md-12">
+        <label>Leave your comment :</label>
+        <textarea class="form-control" rows="5" #comment></textarea>
+      </div>
+
+      <button type="submit" class="btn btn-success">Submit</button>
+    </div>
+
+  </form>
 </div>
+
+
+<!-- Add form
+  <div class="large-12 columns">
+    <h3>Add Business</h3>
+    <form (submit)="addBusiness(
+      company.value,
+      category.value,
+      years_in_business.value,
+      description.value,
+      phone.value,
+      email.value,
+      street_address.value,
+      city.value,
+      state.value,
+      zipcode.value)" >
+
+      <div class="row">
+        <div class="large-6 columns">
+          <label> Company
+            <input type="text" placeholder="Company Name" #company>
+          </label>
+        </div>
+        <div class="large-6 columns">
+          <label> Category
+            <select #category>
+              <option value="0">Select</option>
+              <option *ngFor="let category of categories" value="{{category.name}}">{{category.name}}</option>
+            </select>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-6 columns">
+          <label> Years in Business
+            <input type="text" placeholder="Years in bussiness" #years_in_business>
+          </label>
+        </div>
+        <div class="large-6 columns">
+          <label> Description
+            <textarea #description></textarea>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-6 columns">
+          <label> Phone
+            <input type="text" placeholder="Phone" #phone>
+          </label>
+        </div>
+        <div class="large-6 columns">
+          <label> Email
+            <input type="text" placeholder="Email" #email>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-6 columns">
+          <label> Street Address
+            <input type="text" placeholder="Street Address" #street_address>
+          </label>
+        </div>
+        <div class="large-6 columns">
+          <label> City
+            <input type="text" placeholder="City" #city>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-6 columns">
+          <label> State
+            <input type="text" placeholder="State" #state>
+          </label>
+        </div>
+        <div class="large-6 columns">
+          <label> Zip code
+            <input type="text" placeholder="Zip code" #zipcode>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-12">
+          <input type="submit" class="button" value="Submit">
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>-->
