--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -33,8 +33,8 @@
             <label><input type="radio" name="optradio">I'm new user</label>
           </div>
 
-          <app-signup></app-signup>
-          <app-login></app-login>
+          <!--<app-signup></app-signup>
+          <app-login></app-login>-->
         </div>
 
         <div class="modal-footer">
