--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -38,6 +38,11 @@
       <th><span class="dayNumber">13</span></th>
       <th><span class="dayNumber">14</span></th>
     </tr>
+    <tr >
+      <th colspan="7">
+        <appointment></appointment>
+      </th>
+    </tr>
     <tr class="week">
       <th><span class="dayNumber">15</span></th>
       <th><span class="dayNumber">16</span></th>
