--- a/src/app/components/appointment/appointment.component.css
+++ b/src/app/components/appointment/appointment.component.css
@@ -3,7 +3,8 @@
   width: 800px;
   background-color: #90ee90;
   color: #fff;
-  margin-bottom: 100px;
+  margin-bottom: 5px;
+  font-size: 15px;
 }
 
 .app-timestamp {
