--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -20,7 +20,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="week">
+    <tr class="week" (click)="toggleAppointment()">
       <th><span class="dayNumber" data-toggle="tooltip" data-placement="top" title="Hooray!">1</span></th>
       <th><span class="dayNumber"> 2</span></th>
       <th><span class="dayNumber"> 3</span></th>
@@ -29,7 +29,7 @@
       <th><span class="dayNumber"> 6</span></th>
       <th><span class="dayNumber"> 7</span></th>
     </tr>
-    <tr class="week">
+    <tr class="week" (click)="toggleAppointment()">
       <th><span class="dayNumber">8</span></th>
       <th><span class="dayNumber">9</span></th>
       <th><span class="dayNumber">10</span></th>
@@ -38,12 +38,7 @@
       <th><span class="dayNumber">13</span></th>
       <th><span class="dayNumber">14</span></th>
     </tr>
-    <tr >
-      <th colspan="7">
-        <appointment></appointment>
-      </th>
-    </tr>
-    <tr class="week">
+    <tr class="week" (click)="toggleAppointment()">
       <th><span class="dayNumber">15</span></th>
       <th><span class="dayNumber">16</span></th>
       <th><span class="dayNumber">17</span></th>
@@ -52,7 +47,7 @@
       <th><span class="dayNumber">20</span></th>
       <th><span class="dayNumber">21</span></th>
     </tr>
-    <tr class="week">
+    <tr class="week" (click)="toggleAppointment()">
       <th><span class="dayNumber">22</span></th>
       <th><span class="dayNumber">23</span></th>
       <th><span class="dayNumber">24</span></th>
@@ -60,6 +55,11 @@
       <th><span class="dayNumber">26</span></th>
       <th><span class="dayNumber">27</span></th>
       <th><span class="dayNumber">28</span></th>
+    </tr>
+    <tr *ngIf="showAppointments" class="week">
+      <th colspan="7">
+        <appointment></appointment>
+      </th>
     </tr>
     </tbody>
   </table>
