--- a/src/app/components/booking-table/booking-table.component.html
+++ b/src/app/components/booking-table/booking-table.component.html
@@ -50,6 +50,24 @@
         </select>
       </div>
       <div class="form-group col-md-12">
+        <div class="radio">
+          <label><input type="radio" name="optradio">Table 1</label>
+          <img src="../../../assets/images/reservetion_01.png" alt="Table 1">
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio">Table 2</label>
+          <img src="../../../assets/images/reservetion_02.png" alt="Table 2">
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio">Table 3</label>
+          <img src="../../../assets/images/reservetion_03.png" alt="Table 3">
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio">Table 4</label>
+          <img src="../../../assets/images/reservetion_04.png" alt="Table 4">
+        </div>
+      </div>
+      <div class="form-group col-md-12">
         <label>Leave your comment :</label>
         <textarea class="form-control" rows="5" #comment></textarea>
       </div>
