--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -7,7 +7,7 @@
   <!-- Ng If Tables -->
   <div *ngIf='tables && tables.length' class="row" >
     <div *ngFor="let table of tables"  [class]="table.className"  >
-      <div class="oneTable" [attr.data-guests]='table.guests'>
+      <div (click)="showValue(table.tableId,table.guests)" class="oneTable" [attr.data-guests]='table.guests'>
         <img [src]="imagePath + table.imageUrl" >
       </div>
     </div>
