--- a/src/app/components/admin/admin-booking/admin-booking.component.html
+++ b/src/app/components/admin/admin-booking/admin-booking.component.html
@@ -37,7 +37,7 @@
   <div id="page-wrapper">
     <h3>Our bookings</h3>
 
-      <table *ngIf="bookings && bookings.length" class="table table-striped" >
+      <table *ngIf="bookings && bookings.reverse().length" class="table table-striped" >
         <thead>
         <tr>
           <th>Name</th>
