--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,9 +7,9 @@
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/reservation">Reservation</a></li>
-      <li><a routerLink="/calendar">Calendar</a></li>
+      <!--<li><a routerLink="/calendar">Calendar</a></li>
       <li><a routerLink="/appointment">Appointment</a></li>
-      <li><a routerLink="/booktable">Book a table</a></li>
+      <li><a routerLink="/booktable">Book a table</a></li>-->
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
