--- a/src/app/components/admin/admin-booking/admin-booking.component.html
+++ b/src/app/components/admin/admin-booking/admin-booking.component.html
@@ -33,16 +33,53 @@
       </ul>
     </div>
   </nav>
-
   <div id="page-wrapper">
     <h3>Our bookings</h3>
+    <!-- Table options -->
+    <div>
+      <div class="col-xs-2">
+        <label class="label-control">Rows on page</label>
+        <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+          <option [ngValue]="5">5</option>
+          <option [ngValue]="10">10</option>
+          <option [ngValue]="15">15</option>
+        </select>
+      </div>
+      <div class="col-xs-4">
+        <div class="row">
+          <label class="col-xs-12 label-control">Sort by</label>
+        </div>
+        <div class="col-xs-6">
+          <div class="row">
+            <select class="form-control input-sm" [(ngModel)]="sortBy">
+              <option ngValue="lastName">Name</option>
+              <option ngValue="phone">Phone</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="row">
+            <select class="form-control input-sm" [(ngModel)]="sortOrder">
+              <option ngValue="asc">Ascending</option>
+              <option ngValue="desc">Descending</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div class="row">Filter by name:
+          <input class="form-control" [(ngModel)]="filterQuery"/>
+        </div>
+      </div>
+    </div>
 
-      <table *ngIf="bookings && bookings.reverse().length" class="table table-striped" >
+    <table *ngIf="bookings && bookings.length" class="table table-striped"
+             [mfData]="bookings | dataFilter : filterQuery" #mf="mfDataTable"
+             [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
         <thead>
         <tr>
-          <th>Name</th>
-          <th>Phone</th>
-         <!-- <th>Email</th>-->
+          <th><mfDefaultSorter by="lastName">Name</mfDefaultSorter></th>
+          <th><mfDefaultSorter by="phone">Phone</mfDefaultSorter></th>
           <th>Number of persons</th>
           <th>Date of Reservation</th>
           <th>Time of Reservation</th>
@@ -51,10 +88,10 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let booking of bookings">
+        <tr *ngFor="let booking of mf.data">
           <th><a (click)="showEdit(booking)" data-toggle="modal" data-target="#showOneModal">{{booking.firstName}} {{booking.lastName}}</a> </th>
           <th>{{booking.phone}}</th>
-         <!-- <th>{{booking.email}}</th>-->
+          <!-- <th>{{booking.email}}</th>-->
           <th>{{booking.numberOfPersons}}</th>
           <th>{{booking.dateOfReservation}}</th>
           <th>{{booking.timeOfReservation}}</th>
@@ -63,8 +100,14 @@
           <th><button (click)="deleteBooking(booking.$key)" class="btn btn-danger">Delete</button></th>
         </tr>
         </tbody>
+        <tfoot>
+        <tr>
+          <td colspan="4">
+            <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
+          </td>
+        </tr>
+        </tfoot>
       </table>
-
     <!-- Edit Modal -->
     <div id="editModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
@@ -145,7 +188,6 @@
         </div>
       </div>
     </div>
-
     <!-- Show One Modal -->
     <div id="showOneModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
@@ -170,11 +212,7 @@
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
-
       </div>
     </div>
-
   </div>
 </div>
-
-
